--- a/index.html
+++ b/index.html
@@ -70,6 +70,23 @@
     weights = [1, 2, 3, 4, 5, 6, 7, 8, 9, 1]
     weights_II = [3, 4, 5, 6, 7, 8, 9, 1, 2, 3]
 
+    function getChecksum(code) {
+        checksum = 0
+        for (let i = 0; i < code.length; i++) {
+            checksum = checksum + (code[i] * weights[i])
+        }
+        checksum = checksum % 11
+        if (checksum === 10) {
+            checksum = 0
+            for (let i = 0; i < code.length; i++) {
+                checksum = checksum + (code[i] * weights_II[i])
+            }
+            checksum = checksum % 11
+        }
+        checksum = checksum === 10 ? 0 : checksum
+        return checksum
+    }
+
     function generate_codes() {
         let selected_year = year.value;
         let selected_sex = sex.value;
@@ -108,19 +125,7 @@
         // checksums
 
         _.each(codes, function (code) {
-            checksum = 0
-            for (let i = 0; i < code.length; i++) {
-                checksum = checksum + (code[i] * weights[i])
-            }
-            checksum = checksum % 11
-            if (checksum === 10) {
-                for (let i = 0; i < code.length; i++) {
-                    checksum = checksum + (code[i] * weights_II[i])
-                }
-                checksum = checksum % 11
-            }
-            checksum = checksum === 10 ? 0 : checksum
-            code.push(checksum)
+            code.push(getChecksum(code))
         })
 
         let tmp = [];
@@ -130,6 +135,8 @@
         result = tmp.join('   ')
         result_div.innerHTML = result
     }
+
+
     generate_codes();
     sex.addEventListener('change', generate_codes)
     year.addEventListener('change', generate_codes)
